Remove overflow:hidden from <Section> as was clipping the dropdown menu of the linker.. fixed the float issue by introducing a row-fluid to the audit data

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -228,10 +228,6 @@ h2 > .label {
   h2 {
     margin-top: 0;
   }
-
-  section {
-    overflow: hidden;
-  }
 }
 
 .dropdown-submenu a:focus .dropdown-menu {
